<resources>
    <string name="app_name">Go 4 Lunch</string>

    <string name="tab_label1">Map View</string>
    <string name="tab_label2">List View</string>
    <string name="tab_label3">Workmates</string>

    <string name="login_sign_in_with_twitter">Sign in with Twitter</string>
    <string name="login_sign_in_with_facebook">Sign in with Facebook</string>
    <string name="login_sign_in_with_google">Sign in with Google</string>

    <string name="login_app_description">Find a nice restaurant and invite your co-workers for lunch!</string>


    <string name="twitter_consumer_key" translatable="false">SZmEgyeFYoO6RroGL0kQUclzI</string>
    <string name="twitter_consumer_secret" translatable="false">t9snZvRnZyEfR1WLgEYps7uxpyIX7EABRRamr1ZMzRHc7K03RF</string>


    <string name="facebook_app_id">201198084356317</string>
    <string name="fb_login_protocol_scheme">fb201198084356317</string>

    <string name="facebook_application_id" translatable="false">201198084356317</string>

    <string name="title_friends_list">Friend List</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_map">Map</string>
    <string name="menu_list">List</string>
    <string name="menu_friends">Friends</string>
    <string name="restaurant_detail_call">CALL</string>
    <string name="restaurant_detail_like">LIKE</string>
    <string name="restaurant_detail_website">WEBSITE</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_logout_title">Are you sure you want to logout?</string>
    <string name="restaurant_detail_not_available">Not available</string>
    <string name="dialog_permission_title">Permission to access location is needed for the app to work.</string>
    <string name="dialog_permission_previous_denied">You previously denied location permission. Click ok to open settings to enable it.</string>
    <string name="dialog_permission_required">Permission required</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_exit">EXIT</string>
    <string name="error_no_data">Something went wrong. Try refreshing the data.</string>
    <string name="error_no_user_data">Error getting the users. Please try again.</string>
    <string name="restaurant_detail_no_number">No phone number available.</string>
    <string name="no_result">No results. Try with different parameteres</string>
    <string name="is_joining">is joining!</string>
    <string name="hasnt_decied_yet">hasn\'t decided yet</string>
    <string name="is_eating_at">is eating at</string>
    <string name="restaurant_closing_soon">Restaurant is closing soon</string>
    <string name="restaurant_opened_until">Open until %s</string>
    <string name="restaurant_no_information">Unknown timetable</string>
    <string name="restaurant_closed">Restaurant is closed</string>
    <string name="open_247">Open 24/7</string>
    <string name="rate_submit">Submit</string>
    <string name="rate_cancel">Cancel</string>
    <string name="rate_rate">Rate this restaurant</string>
    <string name="rate_description">Please select some stars and give your feedback</string>
    <string name="menu_your_lunch">Your lunch</string>
    <string name="you_havent_decied">You haven\'t decide yet</string>
    <string name="channel_name">Reminder</string>
    <string name="channel_description">Reminds you at noon which restaurant you picked</string>
    <string name="channel_id" translatable="false">notificaitochannelid</string>
    <string name="notification_title">Don\'t forget</string>
    <string name="notification_subtitle">You are eating at %s</string>

</resources>
